Support source builds of wildfly